Added sending email

--- a/view/tmpl/cart.html
+++ b/view/tmpl/cart.html
@@ -9,7 +9,7 @@
 		{% endfor %}
 		<tr> <td></td> <td></td> <td></td> <td></td> <td id="total"></td> <td></td> </tr>
 	</table>
-	<a href="/order"><button class="btn">Заказать</button></a>
+	<a href="/order" id="orderBtn"><button class="btn">Заказать</button></a>
 {% else %}
 	<span> Корзина пуста </span>
 {% endif %}
