--- a/view/tmpl/itemEdit.html
+++ b/view/tmpl/itemEdit.html
@@ -38,7 +38,7 @@
 			<tr>
 				<td><label> Изображение: </label></td>
 				<td> <input name="image" type="file" multiple="multiple"></td>
-				{% if item.photo %} <td><img class="prev" src="/serv/img?id={{item.id}}"></td> {% endif %}
+				{% if item.photo %} <td><img class="prev" src="/serv/img?id={{item.id}}" /></td> {% endif %}
 			</tr>
 				
 		</table>
