--- a/view/tmpl/message.html
+++ b/view/tmpl/message.html
@@ -9,7 +9,7 @@
 			border-right: 1px solid black;
 		}
 		
-		td#sum{
+		#sum{
 			border: none;
 			
 		}
@@ -30,7 +30,7 @@
 		<table border='2'>
 			<tr> <td>Производитель</td> <td>Название</td> <td>Цена за ед.</td> <td>Количество</td> <td id="sum">Всего</td> </tr>
 			{% for i in 1..session.count %}
-				<tr> <td>{{session.items[i].brand}}</td> <td><a href="/item?item_id={{session.items[i].id}}" >{{session.items[i].title}}</a></td> <td id="price">{{session.items[i].price}}</td> <td>{{session.items[i].count}}</td> <td id="sum">{{session.items[i].count * session.items[i].price}}</td> </tr>
+				<tr> <td>{{session.items[i].brand}}</td> <td><a href="rez.zapto.org/item?item_id={{session.items[i].id}}" >{{session.items[i].title}}</a></td> <td id="price">{{session.items[i].price}}</td> <td>{{session.items[i].count}}</td> <td id="sum">{{session.items[i].count * session.items[i].price}}</td> </tr>
 			{% endfor %}
 		
 		</table>
